# BO-Coli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  ReadMe.md  V2  binary_split_simulation.ipynb  h6_simulations.py  hello_world.py  pyproject.toml  run_trial.pbs.e1004280  run_trial.pbs.o1004280
.streamlit/: config.toml
PBS/: download_results.md  h6.pbs  run_trial.pbs  run_trial.txt
data/: example_manager.pkl
data/ax_clients/: ackley_client.pkl  hartmann6_runs.json
data/bayes_sim/: GammaNoiseSGP_noise_vs_t_repeats.pkl  HeteroWhite_09_29.pkl  HeteroWhite_sequential_09_30.pkl  HeteroWhite_sequential_09_31.pkl  PBS_test_vs_t_repeats_09_28.pkl  multicore_trial.pkl  r_n_dict.pkl  (+3 more)
notebooks/: BO_search_inflexions.ipynb  batch_bayesian_test.ipynb  binary_split_simulation.ipynb  botorch_batch_optimization.ipynb  hpc_run_analysis.ipynb  noise_testing.ipynb  sklearn_gp_test.ipynb  toy_gaussian_process_regressor.ipynb  visualisation_testing.ipynb
src/: BayesClientManager.py  GPVisualiser.py  NNarySearch.py  UI_main.py  __init__.py  ax_helper.py  binary_notebook_helpers.py  distribution_functions.py  gausian_helper.py  generate_surfaces.py  group_manager.py  model_generation.py  stats_eval_helper.py  theme_branding.py  toy_functions.py  ui_group_manager.py  ui_plotter.py  ui_start_new_experiment.py
tests/: test_BayesClientManager.py  test_GroupUi.py  test_NNarySearch.py  test_ax_helpers.py  test_generate_surfaces.py  test_visuals.py
utils/: NNarySearch.py  __init__.py  binary_notebook_helpers.py  gausian_helper.py  gaussian_helper.py  theme_branding.py
(+21 files in other folders)
