[project]
name = "bo-coli"
version = "0.1.0"
description = ""
authors = [
    {name = "Povilas Šaučiuvienas",email = "p.sauciuvienas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
